--- a/style.css
+++ b/style.css
@@ -1,13 +1,23 @@
 body {
-  background-color: lightblue;
+  background-image: lightblue;
+}
+
+img {
+  max-width: 50%;
+  height: auto;
+  border-radius: 8px;
 }
 
 h1 {
   color: white;
   text-align: center;
+  font-family: "Annie Use Your Telescope", serif;
+  font-weight: 400;
+  font-style: normal;
 }
 
 p {
-  font-family: verdana;
-  font-size: 20px;
+  color: white;
+  font-family: times;
+  font-size: 14px;
 }
