--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ img {
 }
 
 h1 {
-  color: white;
+  color: black;
   text-align: center;
   font-family: "Annie Use Your Telescope", serif;
   font-weight: 400;
@@ -17,7 +17,9 @@ h1 {
 }
 
 p {
-  color: white;
-  font-family: times;
+ font-family: "Offside", serif;
+  color:black;
   font-size: 14px;
 }
+
+
