--- a/style.css
+++ b/style.css
@@ -16,6 +16,14 @@ h1 {
   font-style: normal;
 }
 
+h2 {
+  color: black;
+  text-align: center;
+  font-family: "Annie Use Your Telescope", serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
 p {
  font-family: "Offside", serif;
   color:black;
